# wb_parser

./: .env.example  docker-compose.yml
src/: beat.dockerfile  beat_start.sh  celery.dockerfile  pyproject.toml  worker_start.sh
src/apps/pars_settings/: admin.py  apps.py  models.py  service.py  tasks.py
src/apps/pars_settings/google_sheets/: credentials_example.json  google_sheets_export.py  token.pickle
src/apps/pars_settings/migrations/: 0001_initial.py  0002_shop_article_name_article_shop.py  0003_position_current_page_position_target_page_and_more.py  0004_alter_article_code.py
src/apps/tg_users/: admin.py  apps.py  models.py
src/apps/tg_users/migrations/: 0001_initial.py  0002_telegramuser_name.py  0003_alter_telegramuser_options.py
src/config/: celery.py  settings.py
src/service/: message_service.py  notify_service.py  parsers.py  utils.py
